<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FAF7F2">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/circular_button_background"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheerify"
        android:textSize="30sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_daily_affirmation_companion"
        android:textSize="10sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="SmallSp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favorite_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/circular_button_background"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/heart_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home_rounded_button"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/inter"
        android:text="@string/home_text_with_words"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favorite_rounded_button"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/inter"
        android:text="@string/favorite_text_with_words"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/custom_rounded_button"
        android:layout_width="205dp"
        android:layout_height="47dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/inter"
        android:text="@string/custom_text_with_words"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />


</androidx.constraintlayout.widget.ConstraintLayout>

